--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard Challenge</h1>
+        <h1>Belly Button Biodiversity Dashboard Version 1</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
