--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard Version 1</h1>
+      <div class="col-md-12
+       jumbotron text-center">
+        <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-4">
         <div class="well">
-          <h5>Test Subject ID No.:</h5>
+          <h5>Test Subject ID No.:</4>
           <!-- <select id="selDataset"></select> -->
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
@@ -32,8 +33,8 @@
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-5">
-        <div id="bar"></div>
+      <div class="col-md-8">
+        <div id="bar-plot"></div>
       </div>
       <div class="col-md-5">
         <div id="gauge"></div>
