--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12
-       jumbotron text-center">
+      <div class="col-md-12 jumbotron text-center">
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="well">
-          <h5>Test Subject ID No.:</4>
+          <h5>Test Subject ID No.:</5>
           <!-- <select id="selDataset"></select> -->
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
@@ -33,10 +32,10 @@
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-8">
+      <div class="col-md-4">
         <div id="bar-plot"></div>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-4">
         <div id="gauge"></div>
       </div>
     </div>
