--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<style>
+    .jumbotron {
+background-image: url("Landscape-sunset.jpg");
+background-size: cover;
+}
+</style>
+
 </head>
 
 <body>
@@ -14,12 +21,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard</h1>
+        <h1><b>Belly Button Biodiversity Dashboard</b></h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</5>
           <!-- <select id="selDataset"></select> -->
@@ -32,7 +39,7 @@
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-5">
         <div id="bar-plot"></div>
       </div>
       <div class="col-md-4">
